2007-12-12  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c: Extended public interface a bit.
	(gimp_rectangle_tool_point_in_rectangle): New convenience function
	to test if a point is within the rectangle (if active).
	(gimp_rectangle_tool_rectangle_is_new): New function so that
	clients can determine if the rectangle currently being
	rubber-banded was created from scatch or not.

2007-12-12  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcairo-utils.[ch]: renamed
	gimp_cairo_set_source_color() to gimp_cairo_set_source_rgb() and
	added an RGBA variant.

	* libgimpwidgets/gimpcellrenderercolor.c
	(gimp_cell_renderer_color_render)
	* app/widgets/gimpviewrenderer.c (gimp_view_renderer_draw): changed
	accordingly.

	* libgimpwidgets/gimpwidgets.def: updated.

2007-12-12  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcairo-utils.[ch]: added new function
	gimp_cairo_checkerboard_create() and renamed
	gimp_cairo_create_surface_from_pixbuf() to
	gimp_cairo_surface_create_from_pixbuf().

	* libgimpwidgets/gimpcellrenderercolor.c
	(gimp_cell_renderer_color_render): use Cairo utils here.

	* app/widgets/gimpviewrenderer.c (gimp_view_renderer_create_pattern):
	changed accordingly.

	* libgimpwidgets/gimpwidgets.def: updated.

2007-12-12  Sven Neumann  <sven@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/gimpcairo-utils.[ch]: removed here...

	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpcairo-utils.[ch]: and added here after some
	cleanup.

	* libgimpwidgets/gimpwidgets.h: include gimpcairo-utils.h.

	* app/widgets/gimpviewrenderer.c
	* app/widgets/gimpviewrenderergradient.c
	* app/widgets/gimpviewrendererpalette.c: changed accordingly.

	* libgimpwidgets/gimpwidgets.def: updated for Cairo utils.

	* libgimp/gimp.def: added gimp_image_get_vectors_by_tattoo.

2007-12-12  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpitem.[ch]: added GError to GimpItem::rename().

	* app/core/gimplayer.c